Fix spacing of back link

--- a/sass/modules/spartacus/_content.scss
+++ b/sass/modules/spartacus/_content.scss
@@ -2,7 +2,7 @@
 // --------------------------------------------------------------------
 .spartacus-back {
     display: inline-block;
-    margin: 0 0 1rem;
+    margin: 1rem 0;
 
     &:before {
         content: '← ';
